adjust(product-fish):添加产品简介

--- a/product-suger.html
+++ b/product-suger.html
@@ -118,9 +118,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="site-blocks-cover inner-page overlay" style="background-image: url(images/product_suger.jpg);"
-			data-aos="fade" data-stellar-background-ratio="0.5">
-			<div class="row align-items-center justify-content-center">
+		<div class="site-blocks-cover inner-page overlay"
+			style="background-image: url(images/product_suger.jpg);height: 450px;" data-aos="fade"
+			data-stellar-background-ratio="0.5">
+			<div class="row align-items-center justify-content-center custom-banner">
 				<div class="col-md-7 text-center product-banner" data-aos="fade">
 					<h1 class="text-uppercase">姜黄爆汁软糖</h1>
 					<span class="caption d-block text-white">普特健康</span>
@@ -134,29 +135,8 @@
 				<p>
 					<meta charset="utf-8">
 				</p>
-				<p class="chapter"
-					style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 28px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
-					产品简介：</p>
-				<ul class="chapter-character"
-					style="margin-top:26px; margin-left:56px; list-style: disc;color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
-					<li>添加德国WACKER 公司CAVACURMIN&reg; 即一种高生物利用度的姜黄素粉末，将姜黄素的生物利用度提高达40倍</li>
-					<li>每袋含69mg有效姜黄提取物</li>
-					<li>软糖</li>
-				</ul>
-				<div style="margin-top:86px;" class="chapter-desc">
-					<p
-						style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
-						姜黄植物来自东南亚，已有数千年的历史，被用作天然的消化助剂和烹饪香料。像姜一样，它来自姜科，它的健康益处来自其根。</p>
-					<p
-						style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
-						姜黄 （turmeric
-						）是天然超级植物，姜黄素（curcuminoids）是姜黄中的活性植物化合物，占姜黄总量的2-6％。Curcumin是主要的姜黄素，已被确定为其最重要的活性成分，这也是姜黄呈现出黄色的原因。
-					</p>
-					<p
-						style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
-						医学研究表明姜黄素具有 降血脂、降胆固醇、抗肿瘤、抗炎、利胆、 抗氧化、抗衰老消除自由基、 修复肺纤维化等作用，科学家新发现姜黄素有助治疗耐药结核病。</p>
-				</div>
-				<div class="product-box">
+
+				<div class="product-box" style="margin-top:0;margin-bottom:106px;">
 					<div class="product-swiper">
 						<div class="swiper-container" id="swiper-tomato">
 							<div class="swiper-wrapper">
@@ -179,7 +159,7 @@
 						</div>
 					</div>
 					<div class="product-instructions">
-						<p
+						<p class="site-section-heading-title"
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							配料：</p>
 						<p
@@ -189,25 +169,25 @@
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							麦芽糖浆、白砂糖、麦芽糖醇液、脱色脱酸浓缩苹果清汁、甘油、食用葡萄糖、芒果泥、果胶、胶原蛋白肠衣、黄原胶、刺槐豆胶、柠檬酸钠、柠檬酸、乳酸、DL-苹果酸、乳酸钠、姜黄、食用香料、植物油、巴西棕榈蜡
 						</p>
-						<p
+						<p class="site-section-heading-title"
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							食用方式及食用量：</p>
 						<p
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							每日建议量不应超过14粒软糖。</p>
-						<p
+						<p class="site-section-heading-title"
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							适用于：</p>
 						<p
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							素食主义者。</p>
-						<p
+						<p class="site-section-heading-title"
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							本产品不含有：</p>
 						<p
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							不含人造色素，调味剂或甜味剂。没有淀粉，没有玉米，没有牛奶，没有乳糖，没有大豆，没有麸质，没有小麦，没有酵母，没有猪产品。</p>
-						<p
+						<p class="site-section-heading-title"
 							style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 							注意事项：</p>
 						<p
@@ -217,7 +197,28 @@
 					</div>
 
 				</div>
-
+				<p class="chapter"
+					style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 28px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
+					产品简介：</p>
+				<ul class="chapter-character"
+					style="margin-top:26px; margin-left:56px; list-style: disc;color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
+					<li>添加德国WACKER 公司CAVACURMIN&reg; 即一种高生物利用度的姜黄素粉末，将姜黄素的生物利用度提高达40倍</li>
+					<li>每袋含69mg有效姜黄提取物</li>
+					<li>软糖</li>
+				</ul>
+				<div style="margin-top:86px;" class="chapter-desc">
+					<p
+						style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
+						姜黄植物来自东南亚，已有数千年的历史，被用作天然的消化助剂和烹饪香料。像姜一样，它来自姜科，它的健康益处来自其根。</p>
+					<p
+						style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
+						姜黄 （turmeric
+						）是天然超级植物，姜黄素（curcuminoids）是姜黄中的活性植物化合物，占姜黄总量的2-6％。Curcumin是主要的姜黄素，已被确定为其最重要的活性成分，这也是姜黄呈现出黄色的原因。
+					</p>
+					<p
+						style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
+						医学研究表明姜黄素具有 降血脂、降胆固醇、抗肿瘤、抗炎、利胆、 抗氧化、抗衰老消除自由基、 修复肺纤维化等作用，科学家新发现姜黄素有助治疗耐药结核病。</p>
+				</div>
 			</div>
 		</div>
 	</div>
